# Waratil

./: Cargo.toml  LICENSE  main.rs  prayer.rs  quran.rs
.github/workflows/: android.yml
